--- a/scss/app.scss
+++ b/scss/app.scss
@@ -26,4 +26,5 @@
         './layouts/hero',
         './layouts/laptop',
         './layouts/site-footer',
-        './layouts/waypoint';
+        './layouts/waypoint',
+        './layouts/popular';
