--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -12,6 +12,9 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+.mb-20 {
+    margin-bottom: 20px;
+}
 
 .mb-30 {
     margin-bottom: 30px;
@@ -19,6 +22,10 @@
 
 .mb-40{
     margin-bottom: 40px;
+}
+
+.mb-60 {
+    margin-bottom: 60px;
 }
 
 .mb-70{
@@ -70,4 +77,28 @@
 
 .w-full{
     width: 100%;
+}
+
+.width-90 {
+    width: 90%;
+}
+
+.width-59 {
+    width: 59%;
+}
+
+.width-35 {
+    width: 35%;
+}
+
+.width-85 {
+    width: 85%;
+}
+
+.width-74 {
+    width: 74%;
+}
+
+.width-89 {
+    width: 89%;
 }
