--- a/scss/utilits/_variable.scss
+++ b/scss/utilits/_variable.scss
@@ -17,6 +17,9 @@ $dark-white:#F9F9F9;
 $gray-dark:#343a40;
 $gray-100:#424242;
 $gray-200:#626c84;
+$gray-300:#959595;
+$gray-400:#eee;
+$gray-500:#b6b6b6;
 $black-100:#041D57;
 
 :root{
