--- a/scss/app.scss
+++ b/scss/app.scss
@@ -27,4 +27,5 @@
         './layouts/laptop',
         './layouts/site-footer',
         './layouts/waypoint',
-        './layouts/popular';
+        './layouts/popular',
+        './layouts/welcome';
