--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -79,26 +79,7 @@
     width: 100%;
 }
 
-.width-90 {
-    width: 90%;
+.cover {
+    object-fit: cover;
 }
 
-.width-59 {
-    width: 59%;
-}
-
-.width-35 {
-    width: 35%;
-}
-
-.width-85 {
-    width: 85%;
-}
-
-.width-74 {
-    width: 74%;
-}
-
-.width-89 {
-    width: 89%;
-}
