--- a/css/app.css
+++ b/css/app.css
@@ -8263,7 +8263,7 @@ textarea.form-control-lg {
   border-radius: 50% !important;
 }
 
-.rounded-pill, .popular a, .laptop__demo-content a, .hero__demo-content a, .banner__group-btn a {
+.rounded-pill, .welcome__content a, .popular a, .laptop__demo-content a, .hero__demo-content a, .banner__group-btn a {
   border-radius: var(--bs-border-radius-pill) !important;
 }
 
@@ -19100,7 +19100,7 @@ readers do not read off random characters that represent icons */
   --sky-blue-color:#18bfc3;
 }
 
-.popular__item-content a, .banner__nav button, .banner__nav, .btn-base:not(.has-border)::before, .popular a:not(.has-border)::before, .laptop__demo-content a:not(.has-border)::before, .hero__demo-content a:not(.has-border)::before, .banner__group-btn a:not(.has-border)::before, .btn-base.has-border, .popular a.has-border, .laptop__demo-content a.has-border, .hero__demo-content a.has-border, .banner__group-btn a.has-border {
+.popular__item-content a, .banner__nav button, .banner__nav, .btn-base:not(.has-border)::before, .welcome__content a:not(.has-border)::before, .popular a:not(.has-border)::before, .laptop__demo-content a:not(.has-border)::before, .hero__demo-content a:not(.has-border)::before, .banner__group-btn a:not(.has-border)::before, .btn-base.has-border, .welcome__content a.has-border, .popular a.has-border, .laptop__demo-content a.has-border, .hero__demo-content a.has-border, .banner__group-btn a.has-border {
   transition: all 0.4s ease;
 }
 
@@ -19126,11 +19126,11 @@ readers do not read off random characters that represent icons */
   flex-direction: column;
 }
 
-.no-underline, .popular a, .site-footer a, .laptop__demo-content a, .hero__demo-content a, .banner__group-btn a {
+.no-underline, .welcome__content a, .popular a, .site-footer a, .laptop__demo-content a, .hero__demo-content a, .banner__group-btn a {
   text-decoration: none;
 }
 
-.inline-block, .popular a, .laptop__demo-content a, .hero__demo-content a, .banner__group-btn a {
+.inline-block, .welcome__content a, .popular a, .laptop__demo-content a, .hero__demo-content a, .banner__group-btn a {
   display: inline-block;
 }
 
@@ -19231,36 +19231,17 @@ readers do not read off random characters that represent icons */
   width: 100%;
 }
 
-.width-90 {
-  width: 90%;
+.cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-.width-59 {
-  width: 59%;
-}
-
-.width-35 {
-  width: 35%;
-}
-
-.width-85 {
-  width: 85%;
-}
-
-.width-74 {
-  width: 74%;
-}
-
-.width-89 {
-  width: 89%;
-}
-
-.btn-base, .popular a, .laptop__demo-content a, .hero__demo-content a, .banner__group-btn a {
+.btn-base, .welcome__content a, .popular a, .laptop__demo-content a, .hero__demo-content a, .banner__group-btn a {
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 700;
 }
-.btn-base.has-border, .popular a.has-border, .laptop__demo-content a.has-border, .hero__demo-content a.has-border, .banner__group-btn a.has-border {
+.btn-base.has-border, .welcome__content a.has-border, .popular a.has-border, .laptop__demo-content a.has-border, .hero__demo-content a.has-border, .banner__group-btn a.has-border {
   border: 2px;
   border-style: solid;
   padding: 10px 34px;
@@ -19268,22 +19249,22 @@ readers do not read off random characters that represent icons */
   border-color: #ffffff;
   color: var(--text-color);
 }
-.btn-base.has-border:hover, .popular a.has-border:hover, .laptop__demo-content a.has-border:hover, .hero__demo-content a.has-border:hover, .banner__group-btn a.has-border:hover {
+.btn-base.has-border:hover, .welcome__content a.has-border:hover, .popular a.has-border:hover, .laptop__demo-content a.has-border:hover, .hero__demo-content a.has-border:hover, .banner__group-btn a.has-border:hover {
   background-color: var(--background-hover-color);
   color: var(--text-hover-color);
 }
-.btn-base:not(.has-border), .popular a:not(.has-border), .laptop__demo-content a:not(.has-border), .hero__demo-content a:not(.has-border), .banner__group-btn a:not(.has-border) {
+.btn-base:not(.has-border), .welcome__content a:not(.has-border), .popular a:not(.has-border), .laptop__demo-content a:not(.has-border), .hero__demo-content a:not(.has-border), .banner__group-btn a:not(.has-border) {
   padding: var(--padding, 12px 36px);
   background-color: var(--background-color);
   color: var(--text-color);
   position: relative;
   overflow: hidden;
 }
-.btn-base:not(.has-border) span, .popular a:not(.has-border) span, .laptop__demo-content a:not(.has-border) span, .hero__demo-content a:not(.has-border) span, .banner__group-btn a:not(.has-border) span {
+.btn-base:not(.has-border) span, .welcome__content a:not(.has-border) span, .popular a:not(.has-border) span, .laptop__demo-content a:not(.has-border) span, .hero__demo-content a:not(.has-border) span, .banner__group-btn a:not(.has-border) span {
   position: relative;
   z-index: 2;
 }
-.btn-base:not(.has-border)::before, .popular a:not(.has-border)::before, .laptop__demo-content a:not(.has-border)::before, .hero__demo-content a:not(.has-border)::before, .banner__group-btn a:not(.has-border)::before {
+.btn-base:not(.has-border)::before, .welcome__content a:not(.has-border)::before, .popular a:not(.has-border)::before, .laptop__demo-content a:not(.has-border)::before, .hero__demo-content a:not(.has-border)::before, .banner__group-btn a:not(.has-border)::before {
   content: "";
   width: 0%;
   height: 100%;
@@ -19295,10 +19276,10 @@ readers do not read off random characters that represent icons */
   transform: translateX(-50%);
   background-color: var(--background-hover-color);
 }
-.btn-base:not(.has-border):hover, .popular a:not(.has-border):hover, .laptop__demo-content a:not(.has-border):hover, .hero__demo-content a:not(.has-border):hover, .banner__group-btn a:not(.has-border):hover {
+.btn-base:not(.has-border):hover, .welcome__content a:not(.has-border):hover, .popular a:not(.has-border):hover, .laptop__demo-content a:not(.has-border):hover, .hero__demo-content a:not(.has-border):hover, .banner__group-btn a:not(.has-border):hover {
   color: var(--text-hover-color);
 }
-.btn-base:not(.has-border):hover:before, .popular a:not(.has-border):hover:before, .laptop__demo-content a:not(.has-border):hover:before, .hero__demo-content a:not(.has-border):hover:before, .banner__group-btn a:not(.has-border):hover:before {
+.btn-base:not(.has-border):hover:before, .welcome__content a:not(.has-border):hover:before, .popular a:not(.has-border):hover:before, .laptop__demo-content a:not(.has-border):hover:before, .hero__demo-content a:not(.has-border):hover:before, .banner__group-btn a:not(.has-border):hover:before {
   width: 100%;
   opacity: 1;
 }
@@ -19651,9 +19632,10 @@ readers do not read off random characters that represent icons */
   font-weight: 700;
 }
 .popular__dashed {
-  font-size: 20px;
-  font-weight: 600;
-  color: rgba(0, 0, 0, 0.4);
+  width: 35px;
+  height: 2px;
+  display: inline-block;
+  background-image: repeating-linear-gradient(to right, #041d57 0%, #041d57 16%, rgba(255, 255, 255, 0) 16%, rgba(255, 255, 255, 0) 32%, #041d57 32%, #041d57 48%, rgba(255, 255, 255, 0) 48%, rgba(255, 255, 255, 0) 64%, #041d57 64%, #041d57 80%, rgba(255, 255, 255, 0) 80%, rgba(255, 255, 255, 0) 96%, rgba(4, 29, 87, 0) 96%, rgba(4, 29, 87, 0) 100%);
 }
 .popular__description {
   font-size: 18px;
@@ -19672,12 +19654,12 @@ readers do not read off random characters that represent icons */
   position: relative;
   height: 6px;
   background-color: #ffffff;
-  width: 100%;
 }
 .popular__skill-bar .skill-tarck {
   background-color: #18bfc3;
   height: 100%;
-  overflow: visible;
+  width: 27px;
+  overflow: visible !important;
   position: relative;
 }
 .popular__skill-bar .skill-tarck p {
@@ -19723,11 +19705,13 @@ readers do not read off random characters that represent icons */
   margin-bottom: 20px;
 }
 .popular__item-content .list-content li p {
-  font-size: 18px;
-  font-weight: 700;
   color: #041D57;
-  line-height: 27px;
-  margin: 0;
+  font-weight: 700;
+  font-size: 18px;
+}
+.popular__item-content .list-content li p span.number-percentage-count {
+  font-weight: 700;
+  color: #041D57 !important;
 }
 .popular__item-content .list-content li span {
   font-size: 16px;
@@ -19764,4 +19748,57 @@ readers do not read off random characters that represent icons */
 .popular__item-content .content-footer .round-title a span {
   color: #b6b6b6;
   margin: 0 5px 0 0;
+}
+
+.welcome {
+  padding: 100px 0 80px 0;
+}
+.welcome__content {
+  padding-right: 20px;
+}
+.welcome__content h2, .welcome__content .h2 {
+  color: #041D57;
+  font-weight: 700;
+  font-size: 41px;
+  letter-spacing: -0.2px;
+  margin-bottom: 20px;
+}
+.welcome__content p {
+  font-size: 16px;
+  font-weight: 400;
+  color: #677eb4;
+  margin-bottom: 20px;
+  line-height: 29px;
+}
+.welcome__content blockquote {
+  position: relative;
+  font-size: 16px;
+  font-weight: 400;
+  color: #677eb4;
+  padding-left: 30px;
+  border-left: 1px solid #dadada;
+  margin-left: 70px;
+}
+.welcome__content blockquote::before {
+  content: "\f10d";
+  font-family: "Font Awesome 6 Free";
+  font-size: 40px;
+  font-weight: 700;
+  color: #18bfc3;
+  position: absolute;
+  top: 50px;
+  transform: translateY(-50px);
+  left: -50px;
+}
+.welcome__content blockquote span {
+  color: #18bfc3;
+}
+.welcome__primary-btn {
+  --text-color: var(--bs-white);
+  --text-hover-color: var(--bs-white);
+  --background-color: var(--sky-blue-color);
+  --background-hover-color: var(--blue-color);
+}
+.welcome__image {
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
