--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -12,6 +12,11 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+.mb-10 {
+    margin-bottom: 10px;
+}
+
 .mb-20 {
     margin-bottom: 20px;
 }
@@ -82,4 +87,6 @@
 .cover {
     object-fit: cover;
 }
-
+.pr-20 {
+    padding-right: 20px;
+}
