--- a/scss/utilits/_variable.scss
+++ b/scss/utilits/_variable.scss
@@ -11,9 +11,11 @@ $blue:#0062cc;
 $blue-400:#677eb4;
 $orang:#fe813a;
 $sky-blue:#18bfc3;
+$dark-sky-blue:#12b8bc;
 $black:#222222;
 $purple-100:#592B86;
-$white:#ffffff;
+$purple-200:#7255cf;
+$white:#FFFFFF;
 $dark-white:#F9F9F9;
 $gray-dark:#343a40;
 $gray-100:#424242;
@@ -21,10 +23,19 @@ $gray-200:#626c84;
 $gray-300:#959595;
 $gray-400:#eee;
 $gray-500:#b6b6b6;
+$gray-600:#f3f3f3;
 $black-100:#041D57;
+$deep-gray:#999;
+$sky-blue-100:#00baa3;
+$footer-bg:#262e3b;
+$blue-500:#55acee;
+$blue-600:#007bff;
+$border-color:#343e4e;
+$copyright-color:#97b0ea;
 
 :root{
     --orange-color:#fe813a;
     --blue-color:#0062cc;
     --sky-blue-color:#18bfc3;
+    --purple-200:#7255cf;
 }
