--- a/scss/app.scss
+++ b/scss/app.scss
@@ -37,4 +37,6 @@
         './layouts/events',
         './layouts/brand',
         './layouts/journal',
-        './layouts/footer';
+        './layouts/footer',
+        './layouts/service',
+        './layouts/about';
