--- a/scss/layouts/_events.scss
+++ b/scss/layouts/_events.scss
@@ -61,6 +61,50 @@
                 width: 100%;
                 background-color: rgba(0,0,0,.3);
             }
+
+            .overlay-1 {
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+                height: 100%;
+                width: 100%;
+                background-color: rgba(44,195,145,.8);
+            }
+
+            .overlay-2 {
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+                height: 100%;
+                width: 100%;
+                background-color: rgba(144,100,191,.8);
+            }
+
+            .overlay-3 {
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+                height: 100%;
+                width: 100%;
+                background-color: rgba(250,87,93,.8);
+            }
+
+            .overlay-4 {
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+                height: 100%;
+                width: 100%;
+                background-color: rgba(54,159,244,.8);
+            }
         }
 
         .event-content {
