--- a/css/app.css
+++ b/css/app.css
@@ -21254,6 +21254,10 @@ readers do not read off random characters that represent icons */
   width: 100%;
 }
 
+.w-0 {
+  width: 0;
+}
+
 .cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -21432,6 +21436,10 @@ readers do not read off random characters that represent icons */
   .banner--home-1 .overlay {
     padding: 180px 0 100px 0;
   }
+}
+.banner--home-1 .overlay .container img {
+  width: 496px;
+  height: 196px;
 }
 .banner--home-1 .title {
   font-size: 74px;
@@ -22123,6 +22131,9 @@ readers do not read off random characters that represent icons */
   border-color: rgba(255, 255, 255, 0.3);
   color: #FFFFFF !important;
 }
+.volunteer__from .from-border {
+  border-color: #e9e9e9;
+}
 .volunteer__from .file-container {
   position: relative;
   overflow: hidden;
@@ -22148,6 +22159,69 @@ readers do not read off random characters that represent icons */
   --text-hover-color: var(--bs-white);
   --background-color: var(--blue-color);
   --background-hover-color: var(--sky-blue-color);
+}
+.volunteer--part-2__from {
+  background-color: #FFFFFF;
+  color: #041D57;
+}
+.volunteer--part-2__from h2, .volunteer--part-2__from .h2 {
+  color: #041D57;
+}
+.volunteer--part-2__from p {
+  color: #424242;
+  font-weight: 400;
+}
+.volunteer--part-2__from input {
+  width: 100%;
+  height: 55px;
+  background-color: transparent;
+  padding: 0 20px;
+  border: 2px solid #041D57;
+  margin-bottom: 30px;
+}
+.volunteer--part-2__from input::-moz-placeholder {
+  color: #041D57;
+}
+.volunteer--part-2__from input::placeholder {
+  color: #041D57;
+}
+.volunteer--part-2__from .file-container {
+  position: relative;
+  overflow: hidden;
+  border: 2px solid #18bfc3;
+  height: 55px;
+  border-color: #e9e9e9;
+  color: #041D57 !important;
+}
+.volunteer--part-2__from .file-container label {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  padding: 0 20px;
+  width: 100%;
+  display: block;
+  background-image: url("../images/icon/upload_icon_gray.webp");
+  background-repeat: no-repeat;
+  background-position: center right 20px;
+}
+.volunteer--part-2__from textarea {
+  width: 100%;
+  height: 120px;
+  background-color: transparent;
+  padding: 20px;
+  background-image: url("../images/icon/massage_icon.webp");
+  background-repeat: no-repeat;
+  border-width: 2px;
+  border-style: solid;
+  border-color: #e9e9e9;
+  background-position: top 20px right 20px;
+}
+.volunteer--part-2__from textarea::-moz-placeholder {
+  color: #041D57;
+}
+.volunteer--part-2__from textarea::placeholder {
+  color: #041D57;
 }
 
 .events {
@@ -22206,6 +22280,46 @@ readers do not read off random characters that represent icons */
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.3);
+}
+.events__single-event .event-image .overlay-1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(44, 195, 145, 0.8);
+}
+.events__single-event .event-image .overlay-2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(144, 100, 191, 0.8);
+}
+.events__single-event .event-image .overlay-3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(250, 87, 93, 0.8);
+}
+.events__single-event .event-image .overlay-4 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(54, 159, 244, 0.8);
 }
 .events__single-event .event-content h4, .events__single-event .event-content .h4 {
   font-size: 20px;
@@ -22543,7 +22657,15 @@ readers do not read off random characters that represent icons */
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(24, 191, 195, 0.6);
+  background-color: rgba(24, 191, 195, 0.4);
+}
+.footer .recent-post .post-thumb a .overlay-1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(250, 87, 93, 0.8);
 }
 .footer .recent-post .post-info {
   padding-top: 13px;
@@ -22654,4 +22776,164 @@ readers do not read off random characters that represent icons */
   justify-content: center;
   align-items: center;
   text-decoration: none;
+}
+
+.service {
+  margin-top: -100px;
+  padding-bottom: 100px;
+}
+.service__image-1 {
+  background-image: url("../images/icon/category_1.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  position: relative;
+  z-index: 1;
+}
+.service__image-1 .overlay {
+  background-color: rgba(24, 191, 195, 0.8);
+  z-index: 1;
+  padding: 35px 30px;
+  color: #FFFFFF;
+}
+.service__image-1 .overlay i {
+  font-size: 68px;
+  margin-bottom: 30px;
+  display: inline-block;
+}
+.service__image-1 .overlay h5, .service__image-1 .overlay .h5 {
+  font-size: 29px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.service__image-2 {
+  background-image: url("../images/icon/category_2.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  position: relative;
+  z-index: 1;
+}
+.service__image-2 .overlay {
+  background-color: rgba(144, 100, 191, 0.8);
+  z-index: 1;
+  padding: 35px 30px;
+  color: #FFFFFF;
+}
+.service__image-2 .overlay i {
+  font-size: 68px;
+  margin-bottom: 30px;
+  display: inline-block;
+}
+.service__image-2 .overlay h5, .service__image-2 .overlay .h5 {
+  font-size: 29px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.service__image-3 {
+  background-image: url("../images/icon/category_3.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  position: relative;
+  z-index: 1;
+}
+.service__image-3 .overlay {
+  background-color: rgba(54, 159, 244, 0.8);
+  z-index: 1;
+  padding: 35px 30px;
+  color: #FFFFFF;
+}
+.service__image-3 .overlay i {
+  font-size: 68px;
+  margin-bottom: 30px;
+  display: inline-block;
+}
+.service__image-3 .overlay h5, .service__image-3 .overlay .h5 {
+  font-size: 29px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.about {
+  margin-bottom: -70px;
+}
+.about__img {
+  background-image: url("../images/icon/about_img.webp");
+  width: 95%;
+  min-height: 600px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: relative;
+  z-index: 2;
+}
+@media screen and (max-width: 768px) {
+  .about__img {
+    width: 100%;
+  }
+}
+.about__content {
+  padding-top: 130px;
+  padding-left: 55px;
+  padding-right: 90px;
+}
+@media screen and (max-width: 768px) {
+  .about__content {
+    padding: 20px 0 100px 0 !important;
+  }
+}
+@media screen and (max-width: 992px) {
+  .about__content {
+    padding: 20px;
+  }
+}
+.about__content .heading {
+  margin-bottom: 7px;
+}
+.about__content .heading .title {
+  font-size: 46px;
+  font-weight: 700;
+  color: #041D57;
+  position: relative;
+  z-index: 1;
+}
+.about__content .heading .title::before {
+  content: "About";
+  position: absolute;
+  top: -125px;
+  left: -160px;
+  font-size: 200px;
+  color: #f6f6f6;
+  z-index: -1;
+}
+@media screen and (max-width: 992px) {
+  .about__content .heading .title::before {
+    display: none;
+  }
+}
+.about__content p {
+  margin-bottom: 30px;
+  color: #626c84;
+  line-height: 29px;
+}
+.about__content ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+@media screen and (max-width: 375px) {
+  .about__content ul {
+    display: grid;
+  }
+}
+.about__content ul li {
+  display: inline-block;
+  margin-right: 35px;
+  margin-bottom: 10px;
+  color: #011b58;
+  font-size: 13px;
+}
+.about__content ul li i {
+  color: #18bfc3;
 }
