--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -113,8 +113,17 @@
                     height: 100%;
                     top: 0;
                     left: 0;
-                    background-color: rgba(24,191,195,.6);
+                    background-color: rgba(24,191,195,.4);
 
+                }
+
+                .overlay-1 {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    background-color: rgba(250,87,93,.8);
                 }
             }
 
