--- a/scss/layouts/_volunteer.scss
+++ b/scss/layouts/_volunteer.scss
@@ -17,6 +17,7 @@
         @extend %default-transition;
         @include responsive($iphoneSE) {
             padding: 30px;
+
         }
 
         h2 {
@@ -94,6 +95,10 @@
             color: $white !important;
         }
 
+        .from-border {
+            border-color: #e9e9e9;
+        }
+
         .file-container {
             position: relative;
             overflow: hidden;
@@ -130,5 +135,79 @@
         --background-color: var(--blue-color);
         --background-hover-color: var(--sky-blue-color); 
     }
+
+    &--part-2 {
+
+        &__from {
+            background-color: $white;
+            color: $black-100;
+
+            h2 {
+                color: $black-100;
+            }
+
+            p {
+                color: $gray-100;
+                font-weight: 400;
+            }
+            
+           input {
+            width: 100%;
+            height: 55px;
+            background-color: transparent;
+            padding: 0 20px;
+            border: 2px solid $black-100;
+            margin-bottom: 30px;
+            &::placeholder {
+                color: $black-100;
+            }
+        }
+
+        .file-container {
+            position: relative;
+            overflow: hidden;
+            border: 2px solid #18bfc3;
+            height: 55px;
+            border-color: #e9e9e9;
+            color: $black-100 !important;
+
+            label {
+                position: absolute;
+                top: 50%;
+                left: 0;
+                transform: translateY(-50%);
+                padding: 0 20px;
+                width: 100%;
+                display: block;
+                background-image: url('../images/icon/upload_icon_gray.webp');
+                background-repeat: no-repeat;
+                background-position: center right 20px;
+
+            }
+        }
+
+        textarea {
+            width: 100%;
+            height: 120px;
+            background-color: transparent;
+            padding: 20px;
+            background-image: url('../images/icon/massage_icon.webp');
+            background-repeat: no-repeat;
+            border-width: 2px;
+            border-style: solid;
+            border-color: #e9e9e9;
+            background-position: top 20px right 20px;
+
+            &::placeholder {
+                color: $black-100;
+            }
+
+        }
+
+
+    }
+
+}
+
     
 }
