--- a/scss/utilits/_variable.scss
+++ b/scss/utilits/_variable.scss
@@ -9,12 +9,14 @@ $laptop:1400px;
 //color
 $blue:#0062cc;
 $blue-400:#677eb4;
+$blue-200:#369ff4;
 $orang:#fe813a;
 $sky-blue:#18bfc3;
 $dark-sky-blue:#12b8bc;
 $black:#222222;
 $purple-100:#592B86;
 $purple-200:#7255cf;
+$purple-400:#9064bf;
 $white:#FFFFFF;
 $dark-white:#F9F9F9;
 $gray-dark:#343a40;
@@ -25,6 +27,7 @@ $gray-400:#eee;
 $gray-500:#b6b6b6;
 $gray-600:#f3f3f3;
 $black-100:#041D57;
+$black-200:#011b58;
 $deep-gray:#999;
 $sky-blue-100:#00baa3;
 $footer-bg:#262e3b;
@@ -32,6 +35,7 @@ $blue-500:#55acee;
 $blue-600:#007bff;
 $border-color:#343e4e;
 $copyright-color:#97b0ea;
+$gray-700:#f6f6f6;
 
 :root{
     --orange-color:#fe813a;
