--- a/scss/app.scss
+++ b/scss/app.scss
@@ -39,4 +39,6 @@
         './layouts/journal',
         './layouts/footer',
         './layouts/service',
-        './layouts/about';
+        './layouts/about',
+        './layouts/project',
+        './layouts/funfact';
