--- a/scss/layouts/_banner.scss
+++ b/scss/layouts/_banner.scss
@@ -22,6 +22,18 @@
         &--demo3 {
             background-image: url('../images/common/slider_1.webp');
         }
+
+        &--part-1 {
+            background-image: url('../images/common/slider_4.webp');
+        }
+
+        &--part-2 {
+            background-image: url('../images/common/slider_5.webp');
+        }
+
+        &--part-3 {
+            background-image: url('../images/common/slider_6.webp');
+        }
     }
     
     &__overlay {
@@ -50,7 +62,12 @@
     }
 
     &__group-btn {
-        @extend .d-flex, .align-items-center, .gap-3, .justify-content-center;
+        @extend .d-flex, .align-items-center, .gap-3;
+
+        &--center {
+            @extend .justify-content-center;
+        }
+
         a {
             @extend .no-underline, .inline-block, .btn-base, .rounded-pill;
             @include responsive($iphoneSE) {
@@ -60,7 +77,8 @@
 
         @include responsive($iphoneSE) {
            flex-direction: column;
-        }    
+        }
+        
     }
 
     &__primary-btn {
@@ -94,6 +112,9 @@
             @extend .rounded-circle, .border, .border-0, %default-transition, .opacity-0;
             background-color: $sky-blue;
             color: var(--bs-white);
+            @include responsive($tablet) {
+                display: none;
+            }
             
 
             &:hover {
@@ -104,7 +125,7 @@
 
     &:hover {
         .banner__nav {
-            padding: 0 40px;
+            padding: 0 18px;
 
              button {
                 @extend .opacity-100;
@@ -137,7 +158,7 @@
     &--home-1 {
         .overlay {
             @extend %banner-overlay;
-            padding: 250px 0 200px 0;
+            padding: 250px 20px 200px 20px;
             @include responsive($tablet) {
                 padding: 180px 0 100px 0;
             }
@@ -166,5 +187,35 @@
             font-weight: 600;
         }
     }
-}
+
+    &--home-2 {
+        .overlay {
+            @extend %banner-overlay;
+            padding: 250px 0 200px 0;
+            @include responsive($tablet) {
+                padding: 100px 0 100px 0;
+            }
+
+            .title {
+                    font-size: 74px;
+                    font-weight: 700;
+                    max-width: 680px;
+                    @include responsive($tablet) {
+                        max-width: 480px;
+                    }
+
+                }
+            }
+            
+            .description {
+                font-size: 25px;
+                font-weight: 600;
+                margin: 0;
+            }
+
+        }
+    }
+
+    
+
 
