--- a/scss/utilits/_variable.scss
+++ b/scss/utilits/_variable.scss
@@ -19,6 +19,7 @@ $purple-200:#7255cf;
 $purple-400:#9064bf;
 $white:#FFFFFF;
 $dark-white:#F9F9F9;
+$gray:#999999;
 $gray-dark:#343a40;
 $gray-100:#424242;
 $gray-200:#626c84;
@@ -28,6 +29,7 @@ $gray-500:#b6b6b6;
 $gray-600:#f3f3f3;
 $black-100:#041D57;
 $black-200:#011b58;
+$black-300:#555555;
 $deep-gray:#999;
 $sky-blue-100:#00baa3;
 $footer-bg:#262e3b;
