--- a/scss/app.scss
+++ b/scss/app.scss
@@ -41,4 +41,5 @@
         './layouts/service',
         './layouts/about',
         './layouts/project',
+        './layouts/navbar',
         './layouts/funfact';
